--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<!--	<div id='footer'>
 				<div ><img src='icon1.jpg'></img></div>
 		</div>-->
-<img id = 'cake' src='text.jpg' style='display:none'></img>
+<img id = "cake" src="bgtexture.png" style="display:none"></img>
 	<script>
 		window.addEventListener('load',init);
 	</script>
